# python_pool

PP_00/ex00/: Hello.py
PP_00/ex01/: format_ft_time.py
PP_00/ex02/: find_ft_type.py  tester.py
PP_00/ex03/: NULL_not_found.py  tester.py
PP_00/ex04/: whatis.py
PP_00/ex05/: Makefile
PP_00/ex06/: Makefile
PP_00/ex07/: Makefile  sos.py
PP_00/ex08/: Loading.py
PP_00/ex09/: LICENSE  Makefile  ft_package.py  test.py
PP_01/ex00/: give_bmi.py  requirements.txt
PP_01/ex01/: Makefile  array2D.py  requirements.txt  tester.py
PP_01/ex02/: load_image.py  requirements.txt  tester.py
PP_01/ex03/: load_image.py  zoom.py
PP_01/ex04/: load_image.py  rotate.py  tester.py
PP_01/ex05/: load_image.py  pimp_image.py  requirements.txt  tester.py
PP_02/ex00/: load_csv.py  requirements.txt  tester.py
PP_02/ex01/: aff_life.py  load_csv.py
PP_02/ex02/: Makefile  aff_pop.py  load_csv.py
PP_02/ex03/: load_csv.py  projection_life.py  requirements.txt
PP_03/ex00/: S1E9.py  tester.py
PP_03/ex01/: S1E7.py
PP_03/ex02/: DiamondTrap.py  S1E7.py
PP_03/ex03/: ft_calculator.py
PP_03/ex04/: ft_calculator.py
PP_04/ex00/: statistics.py  tester.py
PP_04/ex01/: in_out.py  tester.py
PP_04/ex02/: callLimit.py  tester.py
PP_04/ex03/: new_student.py  tester.py
python_pool_00/ex00/: Hello.py
python_pool_00/ex01/: format_ft_time.py
python_pool_00/ex02/: find_ft_type.py
python_pool_00/ex03/: NULL_not_found.py
python_pool_00/ex09/: Makefile  ft_package.py  pyproject.toml  setup.py  test.py
python_pool_00/ex09/ft_package.egg-info/: PKG-INFO
(+13 files in other folders)
