[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="Example Author", email="smunio@student.42mulhouse.fr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/705mmes/python_pool.git"
Issues = "https://github.com/705mmes/python_pool.git"